--- a/src/app/entity/entity.component.html
+++ b/src/app/entity/entity.component.html
@@ -7,12 +7,18 @@
     </b>
     </div>
     <div class="card-body">
-        
+        <div class="example-header">
+            Selection:
+            <span id="selectedRows"></span>
+          </div>
 <ag-grid-angular 
     style="width: 100%; height: 200px;" 
     class="ag-theme-alpine"
     [rowData]="rowData | async" 
-    [columnDefs]="columnDefs">
+    [columnDefs]="columnDefs"
+    [rowSelection]="rowSelection"
+    (selectionChanged)="onSelectionChanged($event)"
+    (gridReady)="onGridReady($event)">
 </ag-grid-angular>
 <evaluation></evaluation>
 
