--- a/src/app/setup-layout/setup-layout.component.html
+++ b/src/app/setup-layout/setup-layout.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-    <div class="panel panel-default">
-        <div class="panel-heading"><b>Student Master</b></div>
-        <div class="panel-body">
+    <div class="card card-default">
+        <div class="card-header"><b>Student Master</b></div>
+        <div class="card-body">
             <enrollmentff></enrollmentff>
             <router-outlet></router-outlet>
         </div>
