--- a/src/app/first/second.component.html
+++ b/src/app/first/second.component.html
@@ -3,3 +3,9 @@
 <a routerLink="/second">Kritika Screen 2</a>
  <br> 
  <a routerLink="/third/entity">Kritika Screen 3</a>
+ <br> 
+ <a routerLink="/upload1">Ashna Screen 1</a>
+ <br> 
+ <a routerLink="/fregister">Ashna Screen 2</a>
+ <br> 
+ <a routerLink="/mastercourseadd">Ashna Screen 3</a>
