--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,20 @@
 @import "~ag-grid-community/dist/styles/ag-grid.css";
 @import "~ag-grid-community/dist/styles/ag-theme-alpine.css";
 
+@import '../node_modules/@syncfusion/ej2-base/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-buttons/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-inputs/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-popups/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-angular-inputs/styles/material.css';
+
+@import "~bootstrap/dist/css/bootstrap.css" ;
+
+@import 'ag-grid-community/dist/styles/ag-grid.css';  
+
+@import "ag-grid-community/dist/styles/ag-theme-blue.css"; 
+
+
+
 .form-control.ng-touched.ng-invalid{
  border:2px solid red;
 }
