--- a/src/app/entity/entity.component.html
+++ b/src/app/entity/entity.component.html
@@ -20,7 +20,8 @@
     (selectionChanged)="onSelectionChanged($event)"
     (gridReady)="onGridReady($event)">
 </ag-grid-angular>
-<evaluation></evaluation>
+<br>
+<router-outlet></router-outlet>
 
 </div>
 </div>
