--- a/src/app/evaluation/evaluation.component.html
+++ b/src/app/evaluation/evaluation.component.html
@@ -6,7 +6,7 @@
         <ag-grid-angular 
     style="width: 100%; height: 200px;" 
     class="ag-theme-alpine"
-    [rowData]="rowData | async" 
+    [rowData]= "rowData" 
     [columnDefs]="columnDefs">
 </ag-grid-angular>
 
