--- a/src/styles.css
+++ b/src/styles.css
@@ -15,7 +15,7 @@
 
 @import "ag-grid-community/dist/styles/ag-theme-blue.css"; 
 
-
+@import "~@ng-select/ng-select/themes/default.theme.css";
 
 .form-control.ng-touched.ng-invalid{
  border:2px solid red;
