--- a/src/app/cancel-final-registration/studentdetails/studentdetails.component.html
+++ b/src/app/cancel-final-registration/studentdetails/studentdetails.component.html
@@ -1,9 +1,9 @@
-<div> 
-    <app-semester-details></app-semester-details>
-    <app-academic-details></app-academic-details>
+<div><br> 
+    <app-semester-details></app-semester-details><br>
+    <app-academic-details></app-academic-details><br>
     <!-- <app-personal-details></app-personal-details> -->
     
 
     <button class="btn1 btn-defult" disabled>Unregister</button>
-    <button class="btn1 btn-defult" >Cancel</button>
+    <button class="btn2 btn-defult" >Cancel</button>
 </div>
