--- a/src/app/cancel-final-registration/coursedetails/coursedetails.component.html
+++ b/src/app/cancel-final-registration/coursedetails/coursedetails.component.html
@@ -8,30 +8,29 @@
         <label for="status" class="">Program*: </label>
                 </div>
                 <div class="col">
-                    <select class="form-control" id="program "
-                    required
-                    [(ngModel)]="program " name="program ">
-                    <option  [ngValue]="null">Select Program </option>
-                    <option *ngFor="let pow of program" [value]="pow.id">{{pow.name}}</option>
-                  </select>
-        <!-- <div *ngIf="formsetup.get('status').touched && formsetup.get('status').invalid" class="alert alert-danger">
-           Status is required
-        </div> -->
+
+                    <ng-select [items]="programs"
+                               bindLabel="name"
+                               placeholder="Select Program"
+                               appendTo="body"
+                               [(ngModel)]="selected">
+                    </ng-select>
+                   
         </div>
     
     <div class="col-1 col-form-label">
         <label for="session">Session:*</label>
     </div>
     <div class="col">
-        <select class="form-control" id="session "
-        required
-        [(ngModel)]="session " name="session ">
-        <option  [ngValue]="null">Select Session </option>
-        <option *ngFor="let pow of session" [value]="pow.id">{{pow.name}}</option>
-      </select>
-            <!-- <div *ngIf="formsetup.get('sessionyear').touched && formsetup.get('sessionyear').invalid" class="alert alert-danger">
-                Session is required
-            </div> -->
+
+        <ng-select [items]="sessions"
+               bindLabel="name"
+               placeholder="Select Session"
+               appendTo="body"
+               [(ngModel)]="selected">
+        </ng-select>
+       
+           
             </div>
 
            
@@ -39,12 +38,22 @@
 
             <button class="btn1 btn-default" type="ok" routerLink="/sixth/coursedetails/studentdetails">Ok</button>
             <button class="btn1 btn-default" type="cancel" click="g.reset()" >Cancel</button>
-            <!-- <router-outlet></router-outlet> -->
+            
         </div>
         </div>
-    <!-- </div> -->
-        <!-- </div> -->
+   
     </div>
 </form>
 <router-outlet></router-outlet>
 
+<!-- <h1>Angular Multiselect Dropdown with Search - ItSolutionStuff.com</h1>
+  
+<ng-select [items]="categories"
+               bindLabel="name"
+               placeholder="Select Category"
+               appendTo="body"
+               multiple="true"
+               [(ngModel)]="selected">
+</ng-select>
+  
+<button (click)="getSelectedValue()">Get Selected Values</button> -->
