--- a/src/app/cancel-final-registration/studentdetails/semester-details/semester-details.component.html
+++ b/src/app/cancel-final-registration/studentdetails/semester-details/semester-details.component.html
@@ -1,25 +1,39 @@
 <div class="border border-dark rounded">
     <form class="card" > 
-    <div class="form-group">
+    
         <div class="card-header"><b>Semester Details</b></div>
     <div class="card-body">
     
-    <div>
-        <div class="d-inline-block mr-10">
-        <label for="">Semester Name</label>
-        <input type="text" class="form-control" formControlName="semesterName">
-       
-        <label for="">Semester Start Date</label>
-        <input type="text" class="form-control" formControlName="semesterStartDate">
-       
-        <label for="">Semester End Date</label>
-        <input type="text" class="form-control" formControlName="semesterEndDate">
+    <div class="form-group row">
+        <div class="w-70 d-inline-block col">
+            <div class="row">
+            <div class="col-1.5 col-form-label">
+              <label for="">Semester Name</label>
+            </div>
+            <div class="col">
+              <input type="text" class="form-control" formControlName="semesterName">
+            </div>
+
+            <div class="col-1.5 col-form-label">
+              <label for="">Semester Start Date</label>
+            </div>
+            <div class="col">
+             <input type="text" class="form-control" formControlName="semesterStartDate">
+            </div>
+
+            <div class="col-1.5 col-form-label">
+              <label for="">Semester End Date</label>
+            </div>
+            
+            <div class="col">
+              <input type="text" class="form-control" formControlName="semesterEndDate">
+            </div>
         
-       
+            </div>
         </div>
         </div>
         </div>
-        </div>
+        
         </form>
         </div>
         
