--- a/src/app/edit-name-in-hindi (master)/edit-name-in-hindi/edit-name-in-hindi.component.css
+++ b/src/app/edit-name-in-hindi (master)/edit-name-in-hindi/edit-name-in-hindi.component.css
@@ -1,6 +1,5 @@
 .card {
-    /* border-left-style: solid lightgrey; */
-    /* border-style:inset; */
+   
     width: 900px;
     height: 700px;
     margin-top: 100px;
@@ -8,7 +7,7 @@
     margin-left: 150px;
     margin-right: 400px;
     text-align: left;
-    /* text-decoration: antiquewhite; */
+   
 }
 
 .shadow {
@@ -28,28 +27,26 @@
     padding-left: 7px;
 
 }
-/* 
-.card-body {
-    width: 900px;
-    height: 700px;
 
-} */
+.container {
+    width: 1200px;
+    height: 1000px;
+
+}
 
 .form-group {
     font-family: "Times New Roman", Times, serif;
     width: 390px;
     height: 20px;
     text-align: left;
-    margin-left: 2px;
-    margin-top: 25px;
-    /* border: 0.5px solid black; */
-    /* padding:2.5px; */
+    margin-left: 5px;
+    margin-top: 15px;
+    
 }
 
 .alert {
     width: 390px;
     height: 20px;
-    /* border: 0.5px solid black; */
     text-align: left;
     font-family: "Times New Roman", Times, serif;
     color: black;
@@ -62,9 +59,12 @@
     border-radius: 2.5px;
     font-family: "Times New Roman", Times, serif;
     font-weight: bold;
-    margin-left: 5px;
+    margin-left: 390px;
     margin-top: 15px;
 
 }
-
- 
+/*  
+.wid
+{
+  width: 93%;
+}  */
