--- a/src/app/edit-name-in-hindi (master)/edit-name-in-hindi/edit-name-in-hindi.component.html
+++ b/src/app/edit-name-in-hindi (master)/edit-name-in-hindi/edit-name-in-hindi.component.html
@@ -1,145 +1,186 @@
-
-    <form class="form-inline" (ngSubmit)="onSubmit(detailsForm)" #detailsForm="ngForm">
-
     <div class="card card-default">
         <div class="card-heading">
             <h5><b>Edit Name in Hindi( Master)</b></h5></div>
         <div class="shadow border">
         <div class="card-body">
 
-      <!-- <form class="form-inline" (ngSubmit)="onSubmit(detailsForm)" #detailsForm="ngForm"> -->
-    <!-- <div class="content"> -->
-      <div class="form-group">
-          <label for="session ">Session*: </label>
+          <form class="form-inline" action="/action_page.php" #detailsForm="ngForm">
+            <div class="container">
+        
+            
+                <div class="w-85 d-inline-block col"><br>
+                    <div class="form-group row">
+                        <div class="col-2 col-form-label">
+                          <label for="session ">Session*: </label>
+                        </div>
 
-          <!-- <combo-box [dataList] = "sessionList" [vHeight] = 50
-                 [columnName1] = "'sessionYr'"
-                 [columnName2] = "'sessionfrom'"
-                 (valueChange) = "getSelectedSession($event)">
-          </combo-box> -->
-          <select class="form-control" id="session "
-            required
-            [(ngModel)]="session " name="session ">
-            <option  [ngValue]="null">Select Session </option>
-            <option *ngFor="let pow of session" [value]="pow.id">{{pow.name}}</option>
-          </select>
-           <div [hidden]="session" class="alert alert-danger"> 
-            *Required
-            Session Start Date/End Date is required
-          </div> 
-        </div>
+                        
+                        <div class="col-6">
+
+                            <!-- <ng-select [items]="sessions"
+                                      bindLabel="name"
+                                      placeholder="Select Session"
+                                      appendTo="body"
+                                      [(ngModel)]="selected"  [ngModelOptions]="{standalone: true}">
+                            </ng-select> -->
+                          <select class="form-control" id="session "
+                            required
+                            [(ngModel)]="session " name="session ">
+                            <option  [ngValue]="null">Select Session </option>
+                            <option *ngFor="let ses of session" [value]="ses.id">{{ses.name}}</option>
+                          </select>
+               
+                
+                </div>
+            
+            <div class="col-3 col-form-label">
+              <label for="entity" >Entity*: </label>
+            </div>
   
-        <div class="form-group">
-          <label for="program ">Program*: </label>
+           
+            <div class="col-1">
 
-          <!-- <combo-box 
-                     [dataList] = "prgList" 
-                     [vHeight] = 120 [vWidth] = 276
-                     [columnName1] = "'program_name'"
-                     [columnName2] = "'program_id'"
-                     (valueChange) = "getSelectedProgramId($event)" >
-          </combo-box> -->
-          <select class="form-control" id="program "
-            required
-            [(ngModel)]="program " name="program ">
-            <option  [ngValue]="null">Select Program </option>
-            <option *ngFor="let pow of program" [value]="pow.id">{{pow.name}}</option>
-          </select>
-          <div [hidden]="program" class="alert alert-danger">
-            *Required
-          </div>
-        </div>
-  
-        <div class="form-group">
-          <label for="specialization ">Specialization*: </label>
+              <!-- <ng-select  [items]="entities"
+                           bindLabel="name"
+                           placeholder="Select entity"
+                           appendTo="body"
+                           [(ngModel)]="selected" [ngModelOptions]="{standalone: true}">
+              </ng-select> -->
+            <select class="form-control" id="entity "
+              required
+              [(ngModel)]="entity " name="entity ">
+              <option  [ngValue]="null">Select Entity </option>
+              <!-- <option *ngFor="let en of entity" [value]="en.id">{{en.name}}</option> -->
+              <option *ngFor="let en of entity" [value]="en.entity_id">{{en.entity_name}}</option>
+            </select>
+                
+                   
+                    </div>
+        
+                   
+                    </div>
+        
+                </div><br>
+                
 
-          <!-- <combo-box [dataList] = "spList" 
-                 [vHeight] = 50  
-                 [columnName1] = "'specialization_name'"
-                 [columnName2] = "'specialization_id'"
-                 (valueChange) = "getSelectedSp($event)">
-        </combo-box> -->
-          <select class="form-control" id="specialization "
-            required
-            [(ngModel)]="specialization " name="specialization ">
-            <option  [ngValue]="null">Select Specialization </option>
-            <option *ngFor="let pow of specialization" [value]="pow.id">{{pow.name}}</option>
-          </select>
-          <div [hidden]="specialization" class="alert alert-danger">
-            *Required
-          </div>
+              <div class="form-group row">
+                 
+                      <div class="row">
+                          <div class="col-3 col-form-label">
+                  <label for="status" class="">Program*: </label>
+                          </div>
+                          <div class="col-6">
+
+                            <!-- <ng-select [items]="programs"
+                               bindLabel="name"
+                               placeholder="Select Program"
+                               appendTo="body"
+                               [(ngModel)]="selected" [ngModelOptions]="{standalone: true}">
+                               
+                            </ng-select> -->
+                              <select class="form-control" id="program "
+                              required
+                              [(ngModel)]="program " name="program ">
+                              <option  [ngValue]="null">Select Program </option>
+                              <!-- <option *ngFor="let prg of prgBrSpList" [value]="prg.program_id">{{prg.program_name}}</option> -->
+                              <option *ngFor="let pow of program" [value]="pow.id">{{pow.name}}</option>
+                            </select>
+                 
+                  </div>
+              
+              <div class="col-2 col-form-label">
+                <label for="branch ">Branch*: </label>
+              </div>
+
+              <div class="col-1">
+
+                    <!-- <ng-select 
+                               [items]="branches"
+                 class="wid"   bindLabel="name"
+                               placeholder="Select branch"
+                               appendTo="body"
+                               [(ngModel)]="selected" [ngModelOptions]="{standalone: true}">
+                    </ng-select> -->
+
+
+
+                 <select class="form-control" id="branch "
+                  required
+                  [(ngModel)]="branch " name="branch ">
+                  <option  [ngValue]="null">Select Branch </option>
+                  <option *ngFor="let br of branch" [value]="br.id">{{br.name}}</option>
+                </select> 
+                   
+                      </div>  
+                    </div>
+                  </div><br>
+        
+
+                <div class="form-group row">
+                    
+                        <div class="row">
+
+                            <div class="col-3 col-form-label">
+                              <label for="specialization ">Specialization*: </label>
+                            </div>
+
+                            <div class="col-6">
+                               
+                            <ng-select [items]="specializations"
+                               bindLabel="name"
+                               placeholder="Select specialization"
+                               appendTo="body"
+                               [(ngModel)]="selected" [ngModelOptions]="{standalone: true}">
+                            </ng-select>
+                                 
+                                
+                              <!-- <select class="form-control" id="specialization "
+                                required
+                                [(ngModel)]="specialization " name="specialization ">
+                                <option  [ngValue]="null">Select Specialization </option>
+                                <option *ngFor="let sp of specialization" [value]="sp.id">{{sp.name}}</option>
+                              </select> -->
+                   
+                    </div>
+                
+                <div class="col-2 col-form-label">
+                  <label for="semester ">Semester*: </label>
+                </div>
+
+                  <div class="col-1">
+
+                    <!-- <ng-select [items]="semesters"
+                    class="wid" bindLabel="name"
+                                placeholder="Select semester"
+                                appendTo="body"
+                                [(ngModel)]="selected" [ngModelOptions]="{standalone: true}">
+                    </ng-select> -->
+                  <select class="form-control" id="semester "
+                    required
+                    [(ngModel)]="semester " name="semester ">
+                    <option  [ngValue]="null">Select Semester/Module </option>
+                    <option *ngFor="let sem of semester" [value]="sem.id">{{sem.name}}</option>
+                  </select>
+                        
+                        </div>
+            
+                       
+                      </div> 
+          
+            </div><br>
+            
+            <button type="Ok" class="btn1 btn-default" routerLink="/fivth/editname-datagrid" [disabled]="!detailsForm.form.valid">Ok</button>
+                <router-outlet></router-outlet> 
+            </div>
+            
+        </form>
         </div>
+        </div>
+        </div>
+
+        
+
       
-        <div class="form-group">
-          <label for="entity " >Entity*: </label>
-
-          <!-- <combo-box [dataList] = "dataList" 
-                 [vHeight] = 120 [vWidth] = 276
-                 [columnName1] = "'entity_name'"
-                 [columnName2] = "'entity_id'"
-                 (valueChange) = "getSelectedEntityId($event)" >
-          </combo-box>  -->
-          <select class="form-control" id="entity "
-            required
-            [(ngModel)]="entity " name="entity ">
-            <option  [ngValue]="null">Select Entity </option>
-            <option *ngFor="let pow of entity" [value]="pow.id">{{pow.name}}</option>
-          </select>
-          <div [hidden]="entity" class="alert alert-danger">
-            *Required
-          </div>
-        </div>
-      
-  
-  
-        <div class="form-group">
-          <label for="branch ">Branch*: </label>
-
-          <!-- <combo-box [dataList] = "brList" [vHeight] = 50
-                 [columnName1] = "'branch_name'"
-                 [columnName2] = "'branch_id'"
-                 (valueChange) = "getSelectedBranch($event)">
-        </combo-box> -->
-          <select class="form-control" id="branch "
-            required
-            [(ngModel)]="branch " name="branch ">
-            <option  [ngValue]="null">Select Branch </option>
-            <option *ngFor="let pow of branch" [value]="pow.id">{{pow.name}}</option>
-          </select>
-          <div [hidden]="branch" class="alert alert-danger">
-            *Required
-          </div>
-        </div>
-  
-        <div class="form-group">
-          <label for="semester ">Semester/Module*: </label>
-
-          <!-- <combo-box [dataList] = "semList" 
-                 [vHeight] = 100  [vWidth] = 120
-                 [columnName1] = "'semester'"
-                 [columnName2] = "'sem_code'"
-                 (valueChange) = "getSelectedSem($event)">
-          </combo-box> -->
-          <select class="form-control" id="semester "
-            required
-            [(ngModel)]="semester " name="semester ">
-            <option  [ngValue]="null">Select Semester/Module </option>
-            <option *ngFor="let pow of semester" [value]="pow.id">{{pow.name}}</option>
-          </select>
-          <div [hidden]="semester" class="alert alert-danger">
-            *Required
-          </div>
-        </div>
-      
-      <button type="Ok" class="btn1 btn-default" routerLink="/fivth/editname-datagrid" [disabled]="!detailsForm.form.valid">Ok</button>
-    <router-outlet></router-outlet> 
-    <!-- </div> -->
-    
-    <!-- </form> -->
-      </div>
-    </div>
-    </div>
-  </form>
   
   
      
